src/main/java/com/example/aboutme/_core/error/exception/Exception400.java
package com.example.aboutme._core.error.exception;

public class Exception400 extends RuntimeException {

    public Exception400(String msg) {
        super(msg);
    }
}
